export interface IProduto {
    id : number
    nome: string;
    preco: number;
}
